fix spacing issues

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ body{
 }
 
 .content{
-    margin: 0 0.5%;
+    margin: 0 1em;
 }
 
 #weejio{
